# file-rs

./: Cargo.toml
benches/: benchmark.rs
src/: gb_sequence.rs  gbsequence.rs  lib.rs  main.rs  utf.rs  utf16sequence.rs  utf8sequence.rs  vle.rs
src/utf/: utf16sequence.rs  utf8sequence.rs
src/vle/: gb_sequence.rs  unicode.rs
src/vle/unicode/: utf16sequence.rs  utf8sequence.rs
test_files/: gb_test.txt  shisei_UTF-16BE.txt  shisei_UTF-16LE.txt  utf8_test.txt
