[package]
name = "file"
version = "0.4.10"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "file"
path = "src/main.rs"
bench = false

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false

[dependencies]
parking_lot = "0.12.3"
itertools = "0.13.0"